// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Clause component should render a \`date\` field with range 1`] = `
<DocumentFragment>
  <label>
    From
    <input
      aria-label="range input, from value"
      data-testid="range-field-from-input"
      placeholder="0"
      type="date"
      value=""
    />
  </label>
  <label>
    To
    <input
      aria-label="range input, to value"
      data-testid="range-field-to-input"
      placeholder="100"
      type="date"
      value=""
    />
  </label>
</DocumentFragment>
`;

exports[`Clause component should render a \`text\` field 1`] = `
<DocumentFragment>
  <label>
    UniProtKB AC
    <input
      placeholder="P12345"
      type="text"
      value=""
    />
  </label>
</DocumentFragment>
`;

exports[`Clause component should render a \`text\` field with initial value 1`] = `
<DocumentFragment>
  <label>
    UniProtKB AC
    <input
      placeholder="P12345"
      type="text"
      value="P12345"
    />
  </label>
</DocumentFragment>
`;

exports[`Clause component should render an \`enum\` field 1`] = `
<DocumentFragment>
  <label>
    Protein Existence [PE]
    <select>
      <option
        value="1"
      >
        Evidence at protein level
      </option>
      <option
        value="2"
      >
        Evidence at transcript level
      </option>
      <option
        value="3"
      >
        Inferred from homology
      </option>
      <option
        value="4"
      >
        Predicted
      </option>
      <option
        value="5"
      >
        Uncertain
      </option>
    </select>
  </label>
</DocumentFragment>
`;

exports[`Clause component should render an \`integer\` \`range\` field 1`] = `
<DocumentFragment>
  <label>
    From
    <input
      aria-label="range input, from value"
      data-testid="range-field-from-input"
      placeholder="0"
      type="number"
      value=""
    />
  </label>
  <label>
    To
    <input
      aria-label="range input, to value"
      data-testid="range-field-to-input"
      placeholder="100"
      type="number"
      value=""
    />
  </label>
</DocumentFragment>
`;

exports[`Clause component should render an \`integer\` field 1`] = `
<DocumentFragment>
  <label>
    From
    <input
      aria-label="range input, from value"
      data-testid="range-field-from-input"
      placeholder="0"
      type="number"
      value=""
    />
  </label>
  <label>
    To
    <input
      aria-label="range input, to value"
      data-testid="range-field-to-input"
      placeholder="100"
      type="number"
      value=""
    />
  </label>
</DocumentFragment>
`;
